--- a/login.html
+++ b/login.html
@@ -3,31 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Login - Project</title>
+    <link rel="stylesheet" href="sty.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="#">About</a>
             <a href="login.html">Login</a>
         </nav>
     </header>
-      <hr>
-    <div class="main">
+    <main class="container">
         <h1>LOGIN</h1>
-        <form >
-            <label for="email">Email</label><br/>
-            <input type="email" name="email" placeholder="your email">
-            <br/>
-            <label for="Password">Password</label>
-            <br/>
-            <input type="password" name="password" placeholder="your password">
-            <br/>
-            <input type="submit" value="Login">
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Your password" required>
+            </div>
+            <button type="submit">Login</button>
         </form>
-    </div>
-     <footer>
+    </main>
+    <footer>
         <p>&copy;  Project. All rights reserved.</p>
         <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a> | <a href="contact.html">Contact Us</a>
     </footer>
